various minor tweaks and updates

--- a/themes/hugobricks/layouts/shortcodes/brick_map.html
+++ b/themes/hugobricks/layouts/shortcodes/brick_map.html
@@ -7,7 +7,7 @@ Usage:
 
 ![](/uploads/map.png)
 
-[Google Maps](https://www.google.com/maps)
+[Google Maps](https://www.google.com/maps/dir//M%C3%BChlenstra%C3%9Fe+2e,+52382+Niederzier/@50.8764809,6.3880222,12z/data=!4m8!4m7!1m0!1m5!1m1!1s0x47bf432875f7f7bf:0x9eb666fc3e9c51ca!2m2!1d6.470594!2d50.87651?entry=ttu&g_ep=EgoyMDI0MTIxMS4wIKXMDSoASAFQAw%3D%3D)
 
 ## Contact us
 
