--- a/themes/hugobricks/layouts/partials/footerlogo.html
+++ b/themes/hugobricks/layouts/partials/footerlogo.html
@@ -10,4 +10,16 @@
 {{- $subtitle := (index .Site.Data .Language.Lang).header.logo_subtitle -}}
 {{- if .Params.site_logo_subtitle -}}{{- $subtitle = .Params.site_logo_subtitle -}}{{- end -}}
 
-<a href="#top" class="button smaller">Nach oben</a>
+<a href="{{ relLangURL `/` }}#top" class="logo">
+    {{ if $logo }}
+        <img src="{{ $logo }}" alt="{{ (index .Site.Data .Language.Lang).general.title }} logo" />
+    {{ else }}
+        <div class="{{ if $subtitle }}has_subtitle{{ end}}">
+            <img src="{{ $favicon }}" alt="{{ $title }} logo" class="inline black_2_textDark" />
+            <div>
+                <span>{{ $title }}</span>
+                {{ if $subtitle }}<span>{{ $subtitle }}</span>{{ end }}
+            </div>
+        </div>
+    {{ end }}
+</a>
