--- a/themes/hugobricks/layouts/shortcodes/brick_docs.html
+++ b/themes/hugobricks/layouts/shortcodes/brick_docs.html
@@ -1,14 +1,14 @@
-<!-- 
-{{/* 
+<!--
+{{/*
 
 Usage:
 
-{{< brick_docs >}}
+{{< brick_leistungen >}}
 
 ...
 
-{{< /brick_docs >}}
-    
+{{< /brick_leistungen >}}
+
 */}}
 -->
-{{- partial "brick_docs.html" .Inner -}}
+{{- partial "brick_leistungen.html" .Inner -}}
